results/SVCOMP/specgen/log-aastore_aaload1-2024_02_23_17_26_12.txt
import java.util.Random;

public class aastore_aaload1 {
  static class A {
    int value = 0;
  }

  //@ requires size >= 0;
  //@ ensures (\forall int i; 0 <= i && i < size; array[i] != null);
  public static void main(String[] args) {
    int size = new Random().nextInt();
    if (size < 0) return;
    A[] array = new A[size];

    for (int i = 0; i < size; i++) {
      array[i] = new A();
    }
    for (int i = 0; i < size; i++) {
      assert array[i] != null;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/aastore_aaload1.java:8: error: cannot find symbol
  //@ requires size >= 0;
               ^
  symbol:   variable size
  location: class aastore_aaload1
/home/max/Documents/JMLGPT/tmp/aastore_aaload1.java:9: error: cannot find symbol
  //@ ensures (\forall int i; 0 <= i && i < size; array[i] != null);
                                            ^
  symbol:   variable size
  location: class aastore_aaload1
/home/max/Documents/JMLGPT/tmp/aastore_aaload1.java:9: error: cannot find symbol
  //@ ensures (\forall int i; 0 <= i && i < size; array[i] != null);
                                                  ^
  symbol:   variable array
  location: class aastore_aaload1
3 errors

import java.util.Random;

public class aastore_aaload1 {
  static class A {
    int value = 0;
  }

  //@ requires size >= 0;
  //@ ensures (\forall int i; 0 <= i && i < array.length; array[i] != null);
  public static void main(String[] args) {
    int size = new Random().nextInt();
    if (size < 0) return;
    A[] array = new A[size];

    for (int i = 0; i < size; i++) {
      array[i] = new A();
    }
    for (int i = 0; i < size; i++) {
      assert array[i] != null;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/aastore_aaload1.java:8: error: cannot find symbol
  //@ requires size >= 0;
               ^
  symbol:   variable size
  location: class aastore_aaload1
/home/max/Documents/JMLGPT/tmp/aastore_aaload1.java:9: error: non-static variable length cannot be referenced from a static context
  //@ ensures (\forall int i; 0 <= i && i < array.length; array[i] != null);
                                                 ^
/home/max/Documents/JMLGPT/tmp/aastore_aaload1.java:9: error: cannot find symbol
  //@ ensures (\forall int i; 0 <= i && i < array.length; array[i] != null);
                                                          ^
  symbol:   variable array
  location: class aastore_aaload1
3 errors

